Added UserPreferencesController.
We can set history-visibility value, or get it.

Both endpoints are tested and documented in documentation.yaml.
