# src/main/kotlin/com/chesstasks/data/dto/UserPreferencesDao.kt
@@ -5,6 +5,7 @@ import com.chesstasks.data.dao.UserPreferences
 import com.chesstasks.data.dao.UserPuzzleHistoryVisibility
 import org.jetbrains.exposed.sql.insert
 import org.jetbrains.exposed.sql.select
+import org.jetbrains.exposed.sql.update
 import org.koin.core.annotation.Single
 
 @Single
@@ -26,5 +27,11 @@ class UserPreferencesDao {
                 it[UserPreferences.historyVisibility] = historyVisibility
             } get UserPreferences.id
         }
+    }
+
+    suspend fun setHistoryVisibility(userId: Int, value: UserPuzzleHistoryVisibility) = dbQuery {
+        UserPreferences.update(where = {UserPreferences.userId eq userId}) {
+            it[historyVisibility] = value
+        } > 0
     }
 }
